CSS tweaks: - fix Karla to load bold weight, and reset font-weight rules everywhere to 400 or 700 - simplify sidebar width CSS - decrease min size of columns for desktop grid - decrease grid spacing

--- a/src/components/profile/profile.module.scss
+++ b/src/components/profile/profile.module.scss
@@ -72,7 +72,7 @@
 
 .name {
   margin: 0;
-  font-weight: 600;
+  font-weight: 700;
   grid-column: 2 / 5;
   grid-row: 1 / 2;
   align-self: center;
