--- a/src/pages/about.module.scss
+++ b/src/pages/about.module.scss
@@ -39,13 +39,13 @@
 
 h1.pageTitle {
   font-size: 32px;
-  font-weight: 600;
+  font-weight: 700;
   margin-bottom: 32px;
   color: $primary-purple;
 }
 h2.subheading {
   font-size: 20px;
-  font-weight: 600;
+  font-weight: 700;
   margin-bottom: 18px;
   color: $primary-purple;
 }
