--- a/src/pages/index.module.scss
+++ b/src/pages/index.module.scss
@@ -24,9 +24,7 @@
   overflow-y: scroll;
   background-color: var(--white);
   @media (min-width: $desktop) {
-    min-width: var(--sidebar);
-    width: var(--sidebar);
-    max-width: var(--sidebar);
+    min-width: $sidebar;
     height: 100vh;
     display: flex;
     flex-direction: column;
@@ -55,14 +53,14 @@
 
   @media (min-width: $non-mobile) {
     grid-template-columns: repeat(2, 1fr);
-    grid-gap: 2.5rem 2rem;
+    grid-gap: 1.5rem;
     @supports not (display: grid) {
       display: block;
     }
   }
   @media (min-width: $desktop) {
-    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-    grid-gap: 2.5rem 2rem;
+    grid-template-columns: repeat(auto-fill, minmax(14em, 1fr));
+    grid-gap: 1.5rem;
     @supports not (display: grid) {
       display: block;
     }
@@ -102,7 +100,7 @@
 }
 
 .pageNumberButton:disabled {
-  font-weight: 500;
+  font-weight: 400;
   --text: white;
   --background: var(--gray);
   background-color: $primary-purple;
@@ -163,7 +161,7 @@
   border-bottom: 1px solid var(--border-gray);
   h2 {
     text-align: center;
-    font-weight: 500;
+    font-weight: 400;
   }
 }
 
@@ -198,7 +196,7 @@
   margin-left: auto;
   font-size: 13px;
   font-family: "pitch sans web", monospace;
-  font-weight: 600;
+  font-weight: 400;
   text-transform: uppercase;
   padding: 0 6px;
   border: 0;
