--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -17,7 +17,6 @@
   --background: white;
   --text: var(--gray);
   --page-shell-padding: 24px;
-  --sidebar: 310px;
   --sidebar-height: 208px;
 
   color: var(--gray);
